# near-non-transferable-token

./: Cargo.toml  README.md  Readme.md
near-non-transferable-token/: Cargo.toml  README.md
near-non-transferable-token/src/fungible_token/: core.rs  core_impl.rs  events.rs  macros.rs  mod.rs  receiver.rs  resolver.rs  sender.rs  storage_impl.rs
near-non-transferrable-token/: Cargo.toml
near-non-transferrable-token/src/: lib.rs
near-non-transferrable-token/src/fungible_token/: account.rs  core.rs  core_impl.rs  macros.rs  mod.rs  receiver.rs  resolver.rs  sender.rs  storage_impl.rs
src/: event.rs  lib.rs
src/fungible_token/: core.rs  core_impl.rs  macros.rs  mod.rs  receiver.rs  resolver.rs  storage_impl.rs
