
[package]
edition = "2018"
name = "near-non-transferrable-token"
version = "1.0.0"
authors = ["Popula <hi@popula.io>"]
description = "NEAR smart contracts library.\n"
homepage = "https://popula.io"
documentation = "https://docs.rs/near-contract-standards"
categories = ["wasm"]
license = "GPL-3.0"
repository = "https://github.com/near/near-sdk-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.near-sdk]
version = "=4.0.0-pre.7"

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"
