
[package]
edition = "2018"
name = "near-non-transferrable-token"
version = "0.0.0"
authors = ["Popula <hi@popula.io>"]
description = "NEAR smart contracts library.\n"
homepage = "https://popula.io"
documentation = ""
categories = ["wasm"]
license = "GPL-3.0"
repository = "https://github.com/beepopula/near-non-transferrable-token"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Provide near_bidgen macros.
near-sdk = { version = "=4.1.0-pre.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
